codegen/ui_tests/rhai_fn_missing_value.stderr
error: requires value
  --> ui_tests/rhai_fn_missing_value.rs:11:11
   |
11 | #[rhai_fn(name)]
   |           ^^^^
